--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,40 +1,47 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: db-credentials
+type: Opaque
+stringData:
+  DB_HOST: maharaja-mysql.mysql.database.azure.com
+  DB_USER: myadmin@maharaja-mysql
+  DB_PASS: MyStrongPass123!
+  DB_NAME: testdb
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: aks-html-app
+  name: aks-html-db
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: aks-html-app
+      app: aks-html-db
   template:
     metadata:
       labels:
-        app: aks-html-app
+        app: aks-html-db
     spec:
       containers:
-      - name: aks-html-app
-        image: nginx:alpine
+      - name: aks-html-db
+        image: <YOUR-DOCKERHUB-USERNAME>/aks-html-db:latest
         ports:
-        - containerPort: 80
-        volumeMounts:
-        - mountPath: /usr/share/nginx/html
-          name: html-volume
-      volumes:
-      - name: html-volume
-        configMap:
-          name: aks-html-page
+        - containerPort: 3000
+        envFrom:
+        - secretRef:
+            name: db-credentials
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: aks-html-service
+  name: aks-html-db-service
 spec:
   type: LoadBalancer
   selector:
-    app: aks-html-app
+    app: aks-html-db
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 3000
 
